# graphql_study

./: Makefile  README.md  pyproject.toml
app/: main.py
app/connections/: library.db  sqlite.py  tables.sql
app/graphql_query/: query.py
app/models/: book.py  sqlite_model.py
app/routes/: book_routes.py
app/utils/: logger.py  paths.py
