[tool.poetry]
name = "graphql_project"
version = "0.1.0"
description = ""
authors = ["VictorAugustoBarros <victor.augustobarros@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.81.0"
strawberry-graphql = "^0.127.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
